syntax = "proto3";

package proto;

option java_package = "com.hedera.hashgraph.stablecoin.proto";
option java_multiple_files = true;

message ExternalTransferEventData {
    bytes from = 1; // Address
    string networkURI = 2;
    bytes to = 3; // remote address
    bytes amount = 4; // BigInteger
}
